<resources>
    <string name="app_name">News Post</string>
    <string name="search">Search</string>
    <string name="network_error">Network Error</string>
    <string name="internal_server_error">Internal Server Error</string>
    <string name="search_for_img">Search for images</string>
    <string name="something_went_wrong">Something went wrong, please try again</string>
    <string-array name="image_loader">
        <item>app_logo</item><!--app logo 0 -->
        <item>flag</item><!--flag  1 -->
        <item>girl</item><!--flag  2 -->
        <item>man</item><!--flag  3 -->
        <item>user</item><!--flag  4 -->
        <item>other image</item><!--other image-->
    </string-array>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="forcefully_enable_permission">You have forcefully denied some of the required permissions for this action.\nPlease go to permissions and allow them.</string>
    <string name="no_network_msg"><![CDATA[Please check your internet connection &amp; try again]]></string>
    <string name="dummyText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmood tempor inciddidunt ut labore et dolore magna sed do sed do aliqua.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="loading">Loading...</string>
    <string name="mobile_no">Mobile No</string>
    <string name="verify">Verify</string>
    <string name="enter_mobile_no">Enter Mobile Number</string>
    <string name="login_signup">Login/Signup</string>
    <string name="or">or</string>
    <string name="signup_with_fb">Sign up with Facebook</string>
    <string name="signup_with_google">Sign up with Google</string>
    <string name="verify_otp">Verify one time password (OTP)</string>
    <string name="enter_otp">Please enter the 4 digit OTP \nsent to Mobile No.</string>
    <string name="change_number">Change Number</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="full_name">Full Name</string>
    <string name="submit">Submit</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update_profile">Update Profile</string>
    <string name="offer">Offer</string>
    <string name="news">News</string>
    <string name="video">video</string>
    <string name="search_user_hashtag">Search Users, Hashtags</string>
    <string name="notification">Notification</string>
    <string name="used_car">Used Car</string>
    <string name="automobile_news">Automobile News</string>
    <string name="profile">Profile</string>
    <string name="mobile_no1">Mobile Number 1</string>
    <string name="mobile_no2">Mobile  Number 2</string>
    <string name="address1">"Address 1 "</string>
    <string name="address2">Address 2</string>
    <string name="enter_car_details">Enter Car Details</string>
    <string name="search_car_brand">Search Car Brand</string>
    <string name="popular_brand">Popular Brand</string>
    <string name="all_brand">All Brand</string>
    <string name="search_car_model">Search Car Model</string>
    <string name="popular_model">Popular Model</string>
    <string name="all_model">All Models</string>
    <string name="car_registration">Car Registration Years (as per RC)</string>
    <string name="friends">\@ Friends</string>
    <string name="select_cover">Select Cover</string>
    <string name="select_car_price">Select Car Price</string>
    <string name="type_only_digits">Type only Digits</string>
    <string name="final_price">Final Price</string>
    <string name="kilometers">Kilometers</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="insurance_valid">Insurance Valid</string>
    <string name="owner">Owner</string>
    <string name="location">Location</string>
    <string name="manual">Manual</string>
    <string name="drafts">Drafts</string>
    <string name="post">Post</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="airtel">Open Airtel</string>
    <string name="pics">Picture</string>
</resources>