<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/tab_news"
        android:icon="@drawable/news"
        android:title="@string/news"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/tab_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:icon="@drawable/ic_box_add"
        android:id="@+id/tab_add"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <!--nav_item-->
    <item
        android:id="@+id/tab_noti"
        android:icon="@drawable/ic_noti"
        android:title="@string/notification"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tab_profile"
        android:icon="@drawable/edit_user"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />




    <!--<item-->
    <!--android:id="@+id/action_chat"-->
    <!--android:enabled="true"-->
    <!--android:icon="@drawable/ic_chat_white_24dp"-->
    <!--android:title="@string/text_chat"-->
    <!--app:showAsAction="ifRoom" />-->
</menu>
