<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:focusableInTouchMode="true">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp25" />

                <LinearLayout
                    android:id="@+id/ll_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp15"
                    android:layout_marginRight="@dimen/dp15"
                    android:orientation="horizontal">


                    <com.example.myapplication.global.customview.CircleImageView
                        android:id="@+id/img_user"
                        android:layout_width="@dimen/dp90"
                        android:layout_height="@dimen/dp90"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_user"
                        app:civ_border_color="@color/app_color"
                        app:civ_border_width="@dimen/dp1" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/dp10"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/dp2"
                            android:text="Deepak Sharma"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sp17" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/dp2"
                            android:text="#65645664"
                            android:textColor="@color/grey"
                            android:textSize="@dimen/sp17" />

                    </LinearLayout>


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp1"
                    android:layout_marginTop="@dimen/dp15"
                    android:background="@color/grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp45"
                    android:layout_marginLeft="@dimen/dp20"
                    android:layout_marginTop="@dimen/dp10"
                    android:layout_marginRight="@dimen/dp20"
                    android:layout_marginBottom="@dimen/dp10"
                    android:gravity="center"
                    android:padding="@dimen/dp5"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/txt_profile"
                        style="@style/txt_black_normal"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/rectangle_fill"
                        android:gravity="center"
                        android:text="@string/profile"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/txt_video"
                        style="@style/txt_black_normal"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/rectangle_unfill"
                        android:gravity="center"
                        android:text="@string/video" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/dp15"
                    android:paddingRight="@dimen/dp15">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_mobile_no1"
                        style="@style/EdtText"
                        android:layout_marginTop="@dimen/dp10"
                        android:hint="@string/mobile_no1"
                        android:inputType="number"
                        android:maxLength="10" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_mobile_no2"
                        style="@style/EdtText"
                        android:layout_marginTop="@dimen/dp10"
                        android:hint="@string/mobile_no2"
                        android:inputType="number"
                        android:maxLength="10" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_email"
                        style="@style/EdtText"
                        android:layout_marginTop="@dimen/dp10"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_address1"
                        style="@style/EdtText"
                        android:layout_marginTop="@dimen/dp10"
                        android:hint="@string/address1"
                        android:inputType="textPersonName" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_address2"
                        style="@style/EdtText"
                        android:layout_marginTop="@dimen/dp10"
                        android:hint="@string/address2"
                        android:inputType="textPersonName" />

                    <Button
                        android:id="@+id/btn_submit"
                        style="@style/Button"
                        android:layout_marginTop="@dimen/dp25"
                        android:text="@string/submit" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp30" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>
</layout>