<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp35" />

            <LinearLayout
                android:id="@+id/ll_parent_camera"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp45"
                android:layout_marginLeft="@dimen/dp20"
                android:layout_marginRight="@dimen/dp20"
                android:layout_marginBottom="@dimen/dp5"
                android:gravity="center"
                android:padding="5dp"
                android:weightSum="3">

                <TextView
                    android:id="@+id/txt_offer"
                    style="@style/txt_black_normal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_fill"
                    android:gravity="center"
                    android:text="@string/offer"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txt_news"
                    style="@style/txt_black_normal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_unfill"
                    android:gravity="center"
                    android:text="@string/news" />

                <TextView
                    android:id="@+id/txt_video"
                    style="@style/txt_black_normal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_unfill"
                    android:gravity="center"
                    android:text="@string/video" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </RelativeLayout>
</layout>