<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp8"
        android:elevation="@dimen/dp8"
        app:cardCornerRadius="@dimen/dp5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp150">

                <ImageView
                    android:id="@+id/img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/car1" />

                <TextView
                    android:layout_width="@dimen/dp50"
                    android:layout_height="@dimen/dp28"
                    android:layout_marginTop="@dimen/dp10"
                    android:background="@color/fb_color"
                    android:gravity="center"
                    android:text="@string/news"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp15" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp5"
                android:lines="2"
                android:text="@string/forcefully_enable_permission"
                android:textColor="@color/black"
                android:textSize="@dimen/sp16" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp5"
                android:layout_marginRight="@dimen/dp5"
                android:layout_marginBottom="@dimen/dp5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:text="@string/internal_server_error"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/sp15" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:lines="1"
                    android:text="320 View"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/sp15" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>