<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:focusableInTouchMode="true">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp10" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_search"
                    style="@style/EdtText"
                    android:layout_marginLeft="@dimen/dp10"
                    android:layout_marginRight="@dimen/dp10"
                    android:layout_marginBottom="@dimen/dp5"
                    android:background="@drawable/rectangle_unfill"
                    android:backgroundTint="@color/grey"
                    android:drawableLeft="@android:drawable/ic_menu_search"
                    android:drawablePadding="@dimen/dp10"
                    android:drawableTint="@color/grey"
                    android:hint="@string/search_car_model"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/txt_brand"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp40"
                    android:layout_marginTop="@dimen/dp5"
                    android:background="@color/app_color"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/dp10"
                    android:text="@string/popular_model"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp18" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp5" />

                <TextView
                    android:id="@+id/txt_all_brand"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp40"
                    android:layout_marginTop="@dimen/dp5"
                    android:background="@color/app_color"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/dp10"
                    android:text="@string/all_model"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp18" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_all_brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp5" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp80" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>
</layout>